--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -270,12 +270,12 @@ definition={
 }
 }
 
-@gd{arm,
+@gd{
+arm,
 word={АРМ АГ},
 definition={
-Web-интерфейс на основе \gloss{shop}, позволящий пользователям групп 
-\gloss{partner_ag} и \gloss{operator_ag} отмечать найти и просмотреть 
-заказы и отметить факт выдачи, а так же делать выгрузки отчетов
+Web-интерфейс на сайте \gloss{shop}, позволяющий осуществлять поиск и 
+фиксировать факт выдачи заказа, а так же делать различные отчёты и выгрузки. 
 }
 }
 
@@ -285,7 +285,7 @@ word={Партнёр АГ},
 definition={
 Сторонняя организация, предоставляющая различные услуги для \gloss{AG} для
 выдачи пользователям \gloss{shop} как \gloss{nonmater_goods} и используя 
-\gloss{arm}
+в \gloss{arm}
 }
 }
 
@@ -298,5 +298,23 @@ definition={
 }
 }
 
+@gd{
+kkb,
+word={ККБ},
+definition={
+Контроллер конвертации баллов. REST-сервис процессинга баллов <<Активного гражданина>>, 
+служащий прослойкой между \gloss{AGAPI} и \gloss{shop}.
+}
+}
 
+@gd{
+zni,
+word={ЗНИ},
+definition={
+Запрос на изменение. Посылается из \gloss{shop} в \gloss{UNF} при изменении статуса 
+заказа пользователем групп \gloss{operator_ag}, \gloss{partner_ag} при выполнении 
+заказа или покупателем при отмене заказа. После получнения ЗНИ \gloss{UNF} присылает 
+обратным запросом информацию о реальном новом статусе заказа.
+}
+}
 
