--- a/docs/bcc/source/apx_02_errors/index.tex
+++ b/docs/bcc/source/apx_02_errors/index.tex
@@ -1,5 +1,5 @@
        
-\chapter{Таблица фозвращаемых ошибок \gloss{extBCC}}
+\chapter{Таблица возвращаемых ошибок \gloss{extBCC}}
 \label{sec:errors}
 
 \begin{tabular}{|m{2cm}|m{15cm}|}
