--- a/docs/manual/source/index.bib
+++ b/docs/manual/source/index.bib
@@ -318,3 +318,42 @@ definition={
 }
 }
 
+@gd{
+exchange_url,
+word={URL обмена с \gloss{UNF}},
+definition={
+URL на домене \gloss{shop}, на который \gloss{UNF} посылает запросы при обмене 
+заказами и выгрузке каталога, товарных предложени и складских остатков.
+}
+}
+
+@gd{
+zni,
+word={ЗНИ},
+definition={
+Запрос на изменение. Посылается из \gloss{shop} в \gloss{UNF} при изменении статуса 
+заказа пользователем групп \gloss{operator_ag}, \gloss{partner_ag} при выполнении 
+заказа или покупателем при отмене заказа. После получнения ЗНИ \gloss{UNF} присылает 
+обратным запросом информацию о реальном новом статусе заказа.
+}
+}
+
+@gd{
+GoodsEndLockDate,
+word={ДОБ},
+definition={
+Дата окончания бронирования. Характеристика заказа, показывающая до какого числа 
+покупатель может получить своё поощрение. После наступления этой даты заказ получает 
+в \gloss{UNF} статус "Аннулирован" и передаётся в \gloss{shop} c \gloss{BackRequest}
+}
+}
+
+@gd{
+BackRequest,
+word={ОТ},
+definition={
+Процесс передачи в \gloss{shop} из \gloss{UNF} информации о заказе в процессе обмена
+}
+}
+
+
